--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,4 +1,4 @@
-body {
+.App {
   text-align: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url("./background.jpg");
   background-size: cover;
@@ -14,6 +14,7 @@ header {
   background-color: rgb(44, 3, 52);
   font-size: 1.6rem;
   height: 5rem;
+  width: 100%;
 }
 
 span {
