--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -14,7 +14,7 @@
   padding: 1rem;
   border: 1px solid black;
   border-radius: 50px;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
   width: 15rem;
   font-size: 1rem;
 }
