added useState and useEffect

--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -1,8 +1,13 @@
-#track {
+.track {
   border: 1px solid black;
   color: black;
   background-color: rgb(234, 194, 234);
   margin: 0.3rem 1rem;
   padding-left: 0.5rem;
   text-align: left;
+  font-size: 0.9rem;
+}
+
+.track p {
+  line-height:60%;
 }
