--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -13,7 +13,7 @@
   color: white;
   background-color: rgb(44, 3, 52);
   padding: 1rem;
-  border: 1px solid black;
+  border: 1px solid rgb(109, 7, 130);
   border-radius: 50px;
   margin-bottom: 1rem;
   width: 10rem;
@@ -22,5 +22,5 @@
 
 #search-btn:hover {
   cursor: pointer;
-  background-color:rgb(109, 7, 130)
+  background-color:rgb(109, 7, 130);
 }
