--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -19,8 +19,15 @@
   font-size: 1rem;
 }
 
-
 #save-btn:hover {
   cursor: pointer;
-  background-color:rgb(109, 7, 130)
+  background-color:rgb(109, 7, 130);
+}
+
+#playlist-name {
+  background-color: transparent;
+  font-size: 1.5rem;
+  border: none;
+  color: white;
+  text-align: center;
 }
