--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -18,9 +18,22 @@
   padding: 0.3rem 0.5rem;
   margin: 0.5rem;
   align-self: right;
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
 }
 
 .add-btn:hover {
   cursor: pointer;
-  background-color:rgb(234, 194, 234);
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.info {
+  font-weight: lighter;
+  font-size: 0.9rem;
 }
